# multiscale-modelling

./: CMakeLists.txt  main.cpp
AbstractGridModel/: BaseGridModel.h  GridModel.h
AbstractProcessor/: Processor.h
Cells/: BinaryCell.cpp  BinaryCell.h  GrainCell.cpp  GrainCell.h  RgbColor.h
Grid/: BoundaryCondition.h  Cell.cpp  Cell.h  Grid.h  Neighbourhood.h  Row.h
Headers/: Box.h  Cell.h  Grid.h  GridModel.h  MainWindow.h  Row.h  SimulationController.h
Neighbourhood/: Neighbourhood.h  NeighbourhoodService.h  OneDimensionalNeighbourhoodService.h  TwoDimensionalNeighbourhoodService.h
Neighbourhood/DataTransferObject/: NeighbourhoodTransferObject.h
Neighbourhood/Service/: NeighbourhoodService.h  OneDimensionalNeighbourhoodService.h  TwoDimensionalNeighbourhoodService.h
PostProcessors/DRX/: DrxProcessor.cpp  DrxProcessor.h  DrxTransferObject.h
PostProcessors/MonteCarlo/: MonteCarloProcessor.cpp  MonteCarloProcessor.h
PostProcessors/MonteCarlo/Thread/: MonteCarloThread.cpp
Sources/: Box.cpp  Cell.cpp  Grid.cpp  GridModel.cpp  MainWindow.cpp  Row.cpp  SimulationController.cpp
Types/: Types.h
UI/: gamewindow.ui  graingrowthwindow.ui  mainwindow.ui  onedimensionalwindow.ui
Windows/Game/: GameWindow.cpp  GameWindow.h
Windows/Game/GridModel/: GameGridModel.cpp  GameGridModel.h
Windows/Game/Processor/: GameProcessor.cpp  GameProcessor.h
Windows/GrainGrowth/: GrainGrowthWindow.cpp  GrainGrowthWindow.h
Windows/GrainGrowth/GridModel/: GrainGrowthGridModel.cpp  GrainGrowthGridModel.h  RadiusNeighbourhoodGridModel.cpp  RadiusNeighbourhoodGridModel.h
Windows/GrainGrowth/GridModel/Base/: GrainGrowthGridModel.cpp  GrainGrowthGridModel.h
Windows/GrainGrowth/GridModel/RadiusNeighbourhood/: RadiusNeighbourhoodGridModel.cpp  RadiusNeighbourhoodGridModel.h
Windows/GrainGrowth/MonteCarloProcessor/: MonteCarloProcessor.cpp  MonteCarloProcessor.h
Windows/GrainGrowth/Processor/: BaseGrainGrowthProcessor.cpp  BaseGrainGrowthProcessor.h  GrainGrowthProcessor.cpp  GrainGrowthProcessor.h
Windows/GrainGrowth/Processor/Threads/: GrainGrowthThread.cpp  RadiusGrainGrowthThread.cpp
Windows/GrainGrowth/Processors/DRX/: DrxProcessor.cpp
Windows/GrainGrowth/Processors/GrainGrowth/: BaseGrainGrowthProcessor.cpp  BaseGrainGrowthProcessor.h  GrainGrowthProcessor.cpp  GrainGrowthProcessor.h
Windows/GrainGrowth/Processors/MonteCarlo/: MonteCarloProcessor.cpp  MonteCarloProcessor.h
Windows/Main/: MainWindow.cpp  MainWindow.h
Windows/OneDimensional/: OneDimensionalWindow.cpp  OneDimensionalWindow.h
Windows/OneDimensional/GridModel/: OneDimensionalGridModel.cpp  OneDimensionalGridModel.h
Windows/OneDimensional/Processor/: OneDimensionalProcessor.cpp  OneDimensionalProcessor.h
(+5 files in other folders)
